# wirelogd

./: .cz.toml  .devcontainer.json  .editorconfig  .gitattributes  .gitignore  .goreleaser.yml  .pre-commit-config.yaml  .yamlfmt.yml  .yamllint.yml  CHANGELOG.md  Makefile  README.md  Taskfile.yml  go.mod  go.sum  helpers.go  setup.cfg  setup.py  wirelogd.go  wirelogd_man.go
.chglog/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/features/mkdir/: devcontainer-feature.json  install.sh
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS  FUNDING.yml  renovate.json
.github/workflows/: cd.yml  ci.yml  releases.yml  tests.yml
DEBIAN/: control  postinst
completions/: wirelogd.bash  wirelogd.fish  wirelogd.zsh
contrib/: config.json  config.toml  postinstall-deb.sh  wirelogd-nopasswd  wirelogd.cfg  wirelogd.service
man/: wirelogd.1
tests/: test_main.py
wirelogd/: main.py
