[metadata]
name = wirelogd
version = 0.1.0
description = Try to log "connection state" of WireGuard client peers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://openproject.u-pem.fr/projects/wireguard-logging-daemon/repository
author = Nicolas Karolak
author_email = nicolas.karolak@univ-eiffel.fr
license = WTFPL
license_file = LICENSE

[options]
packages = find:
install_requires=
setup_requires=
    setuptools
    wheel

[options.entry_points]
console_scripts=
    wirelogd=wirelogd.main:main

[options.extras_require]
dev =
    flake8
    flake8-bandit
    flake8-commas
    flake8-docstring
    flake8-import-order
    flake8-quotes
    mypy
    pylint
test =
    pytest
    pytest-cov
    pytest-subprocess

[options.data_files]
etc = contrib/wirelogd.cfg
etc/systemd/system = contrib/wirelogd.service
etc/sudoers.d = contrib/wirelogd-nopasswd

[flake8]
exclude =
    .venv/
ignore = W503
;max-line-length = 88
